@@ -152,9 +152,66 @@ out SKCTL@$d20f:byte   ; audio control
 ;Keyboard
 
 key:enum
+  A = 63
+  B = 21
+  C = 18
+  D = 58
+  E = 42
+  F = 56
+  G = 61
+  H = 57
+  I = 13
+  J = 1
+  K = 5
+  L = 0
+  M = 37
+  N = 35
+  O = 8
+  P = 10
   Q = 47
+  R = 40
+  S = 62
+  T = 45
+  U = 11
+  V = 16
+  W = 46
+  X = 22
+  Y = 43
+  Z = 23
+  SPACE = 33 
+  RETURN = 12
+  ESC = 28
+  TAB = 44
+  DEL = 52
+  '0' = 50
+	'1' = 31
+	'2' = 30
+	'3' = 26
+	'4' = 24
+	'5' = 29
+	'6' = 27
+	'7' = 51
+	'8' = 53
+	'9' = 48
+	'<' = 54
+	'>' = 55
+	'-' = 14
+	'=' = 15
+	';' = 2
+	'+' = 6
+	'*' = 7
+	CAPS = 60
+	','  = 32
+	'.'  = 34
+	'/'  = 38
+	INV  = 39
+	F1   = 67
+	F2   = 68
+	F3   = 83
+	F4   = 84
+	HELP = 17
   none = 255
-
+	
 in CH@764:key  ;last pressed character
 
 ;wait'key:macro =
